@@ -1,3 +1,8 @@
+2008-01-29  Tomas Cerha  <cerha@brailcom.org>
+
+	* speechd/client.py (SSIPClient.__init__): Use the environment
+	variable `SPEECHD_HOST' if defined.
+
 2007-11-25  Tomas Cerha  <cerha@brailcom.org>
 
 	* speechd/client.py: Handle TypeError while SPEECHD_PORT value
